Add minimum-stability for composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,14 @@
 {
-    "name": "jankx/admin",
-    "description": "The Jankx admin framework is a partial of Jankx theme framework",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Puleeno Nguyen",
-            "email": "puleeno@gmail.com"
-        }
-    ],
-    "require": {}
+  "name": "jankx/admin",
+  "description": "The Jankx admin framework is a partial of Jankx theme framework",
+  "type": "library",
+  "license": "MIT",
+  "minimum-stability": "dev",
+  "authors": [
+    {
+      "name": "Puleeno Nguyen",
+      "email": "puleeno@gmail.com"
+    }
+  ],
+  "require": {}
 }
